src/test/ui/parser/unsafe-foreign-mod.stderr
error: extern block cannot be declared unsafe
  --> $DIR/unsafe-foreign-mod.rs:1:1
   |
LL | unsafe extern "C" {
   | ^^^^^^

error: aborting due to previous error

