src/test/ui/parser/unsafe-foreign-mod.rs
unsafe extern "C" {
    //~^ ERROR extern block cannot be declared unsafe
}

fn main() {}
